force-app/main/default/objects/Request_for_Change__c/Request_for_Change__c.object-meta.xml
<CustomObject>
    <description>Request for Change, also known as Change Management or RFC</description>
    <label>Request for Change</label>
    <nameField>
        <displayFormat>RFC-{00000}</displayFormat>
        <label>Request for Change</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request for Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>