force-app/main/default/objects/Request_for_Change__c/fields/Actual_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date_Time__c</fullName>
    <label>Actual End Date/Time</label>
    <type>DateTime</type>
</CustomField>