force-app/main/default/objects/Request_for_Change__c/fields/Actual_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_Time__c</fullName>
    <label>Actual Start Date/Time</label>
    <type>DateTime</type>
</CustomField>