force-app/main/default/objects/Request_for_Change__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <inlineHelpText>Record Ownership will be auto set based off this field when the record is created</inlineHelpText>
    <label>Assignment Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PGi-RFC-EU-Branding&amp;Conf Email</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-EU-Tier 1-CS (Audio)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Audio Projects</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Business Intelligence (BI)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-GM Tools &amp; Integration Proj</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-GM Web Projects</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-iMeet Projects</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-InfoSec</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-QA</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-QA/DEV Lab</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 2-Deskside Support</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 2-Integrations</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Audio Applications</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Database Operations</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-iMeet Ops</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Network</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-SaaS Ops</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-SAN Admin</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-SRE (Denver)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Systems Admin</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Systems Ops</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Telco</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 3-Voice Delivery</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-Agenday</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-Audio Interoperabili</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-Database Development</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-R&amp;D (Customer Sites)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-R&amp;D(GM Dsktp&amp;Phone)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-R&amp;D (GM Mobile Phone)</fullName>
            </value>
            <value>
                <fullName>PGi-RFC-GL-Tier 4-R&amp;D (HUB&amp;MyInfo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>