force-app/main/default/objects/Request_for_Change__c/fields/Auto_Approval_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Submission_Status__c</fullName>
    <label>Auto Approval Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFC Approval Failed</fullName>
            </value>
            <value>
                <fullName>RFC Tasks Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>