force-app/main/default/objects/Request_for_Change__c/fields/BackoutDuration__c.field-meta.xml
<CustomField>
    <fullName>BackoutDuration__c</fullName>
    <inlineHelpText>Enter the # of minutes (ex: 5 for five minutes, 60 for sixty minutes, etc)</inlineHelpText>
    <label>Backout Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>