force-app/main/default/objects/Request_for_Change__c/fields/CAB_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CAB_Review_Date__c</fullName>
    <label>CAB Review Date</label>
    <type>Date</type>
</CustomField>