force-app/main/default/objects/Request_for_Change__c/fields/Clients_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Clients_Impacted__c</fullName>
    <label>Clients Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>