force-app/main/default/objects/Request_for_Change__c/fields/Complete_RFC__c.field-meta.xml
<CustomField>
    <fullName>Complete_RFC__c</fullName>
    <label>Complete RFC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>