force-app/main/default/objects/Request_for_Change__c/fields/Configuration_Items_CIs__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Items_CIs__c</fullName>
    <label>Configuration Items (CI&apos;s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>