force-app/main/default/objects/Request_for_Change__c/fields/Destination_IP_Subnet_s__c.field-meta.xml
<CustomField>
    <fullName>Destination_IP_Subnet_s__c</fullName>
    <label>Destination IP/Subnet(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>