force-app/main/default/objects/Request_for_Change__c/fields/Destination_Port_s__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port_s__c</fullName>
    <label>Destination Port(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>