force-app/main/default/objects/Request_for_Change__c/fields/Has_Backout_Been_Tested__c.field-meta.xml
<CustomField>
    <fullName>Has_Backout_Been_Tested__c</fullName>
    <label>Has Backout Been Tested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>