force-app/main/default/objects/Request_for_Change__c/fields/If_Other__c.field-meta.xml
<CustomField>
    <fullName>If_Other__c</fullName>
    <label>If Other?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>