force-app/main/default/objects/Request_for_Change__c/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <label>Implementation Plan</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>