force-app/main/default/objects/Request_for_Change__c/fields/Infrastructure_CIs_Affected__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_CIs_Affected__c</fullName>
    <label>Infrastructure CIs Affected</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>