force-app/main/default/objects/Request_for_Change__c/fields/Is_Within_SCA_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Is_Within_SCA_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Within SCA Schedule</label>
    <type>Checkbox</type>
</CustomField>