force-app/main/default/objects/Request_for_Change__c/fields/IsCurrentUserAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUserAssigned__c</fullName>
    <formula>If ($User.Id = Assigned_To__r.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser_Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>