force-app/main/default/objects/Request_for_Change__c/fields/isWithdrawRequestClicked__c.field-meta.xml
<CustomField>
    <fullName>isWithdrawRequestClicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWithdrawRequestClicked</label>
    <type>Checkbox</type>
</CustomField>