force-app/main/default/objects/Request_for_Change__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>