force-app/main/default/objects/Request_for_Change__c/fields/MOP_details_will_be_attached__c.field-meta.xml
<CustomField>
    <fullName>MOP_details_will_be_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if all details for this area will be attached to the MOP</inlineHelpText>
    <label>MOP details will be attached</label>
    <type>Checkbox</type>
</CustomField>