force-app/main/default/objects/Request_for_Change__c/fields/NOC_Alert_Case__c.field-meta.xml
<CustomField>
    <fullName>NOC_Alert_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NOC Alert Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Request for Change</relationshipLabel>
    <relationshipName>Request_for_Change</relationshipName>
    <type>Lookup</type>
</CustomField>