force-app/main/default/objects/Request_for_Change__c/fields/Outage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Outage_Duration__c</fullName>
    <inlineHelpText>Enter in # of minutes</inlineHelpText>
    <label>Vendor Outage Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>