force-app/main/default/objects/Request_for_Change__c/fields/Outage_Location__c.field-meta.xml
<CustomField>
    <fullName>Outage_Location__c</fullName>
    <inlineHelpText>If Outage is ‘yes’, fill in the location of the work (or the place where the work will impact).</inlineHelpText>
    <label>Outage Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>