force-app/main/default/objects/Request_for_Change__c/fields/Outage_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Outage_Start_Date_Time__c</fullName>
    <inlineHelpText>Complete if Outage is ‘yes’.  The time visible is dependent on your user settings.</inlineHelpText>
    <label>Outage Start Date/Time</label>
    <type>DateTime</type>
</CustomField>