force-app/main/default/objects/Request_for_Change__c/fields/Personal_Information_Data_Request__c.field-meta.xml
<CustomField>
    <fullName>Personal_Information_Data_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Information Data Request</label>
    <referenceTo>PIDR__c</referenceTo>
    <relationshipLabel>Request for Change</relationshipLabel>
    <relationshipName>Request_for_Change</relationshipName>
    <type>Lookup</type>
</CustomField>