force-app/main/default/objects/Request_for_Change__c/fields/PGi_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>PGi_Product_Name__c</fullName>
    <label>PGi Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ACSS</fullName>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>APSXML.DLL</fullName>
            </value>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>BOB (Audio)</fullName>
            </value>
            <value>
                <fullName>Branding Editor</fullName>
            </value>
            <value>
                <fullName>Call Manager</fullName>
            </value>
            <value>
                <fullName>CES</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Cloud Loader</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Event Conferencing - Greeted Entry</fullName>
            </value>
            <value>
                <fullName>Event Conferencing - Passcode Entry</fullName>
            </value>
            <value>
                <fullName>Event Portal</fullName>
            </value>
            <value>
                <fullName>GlobalMeet.com</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Admin Portal (Conf. HUB)</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Audio</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - for Skype for Business</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - My Meeting Hub</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Web</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Web 5.0</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Webcast</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Webinar</fullName>
            </value>
            <value>
                <fullName>Global Skype Account Provisioning Service (GAPS)</fullName>
            </value>
            <value>
                <fullName>iGLOO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>