force-app/main/default/objects/Request_for_Change__c/fields/Planned_Days_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Planned_Days_of_Week__c</fullName>
    <inlineHelpText>Only populate if the Schedule Type is Recurs Specific Days, otherwise use Start Day and End Day.</inlineHelpText>
    <label>Planned Days of Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>