force-app/main/default/objects/Request_for_Change__c/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <formula>TEXT(FLOOR(Planned_End_Date_Time__c - Planned_Start_Date_Time__c))&amp;&quot;:&quot;&amp;

TEXT(FLOOR(MOD((Planned_End_Date_Time__c - Planned_Start_Date_Time__c)*24,24)))&amp;&quot;:&quot;&amp;

TEXT(ROUND(MOD((Planned_End_Date_Time__c - Planned_Start_Date_Time__c)*1440,60),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data will appear as Xdays:Xhours:Xminutes</inlineHelpText>
    <label>Planned Duration</label>
    <type>Text</type>
</CustomField>