force-app/main/default/objects/Request_for_Change__c/fields/Planned_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date_Time__c</fullName>
    <inlineHelpText>The time visible is dependent on your user settings.</inlineHelpText>
    <label>Planned Start Date/Time</label>
    <type>DateTime</type>
</CustomField>