force-app/main/default/objects/Request_for_Change__c/fields/Preparation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Plan__c</fullName>
    <label>Preparation Plan</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>