force-app/main/default/objects/Request_for_Change__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated via code from the Custom Metadata settings list (https://na68.salesforce.com/m00?setupid=CustomMetadata)</description>
    <label>Approval Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_for_Change</relationshipName>
    <type>Lookup</type>
</CustomField>