force-app/main/default/objects/Request_for_Change__c/fields/Reason_For_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Change__c</fullName>
    <label>Reason For Change</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>