force-app/main/default/objects/Request_for_Change__c/fields/Related_SCA__c.field-meta.xml
<CustomField>
    <fullName>Related_SCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related SCA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Request_for_Change__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Standard Change Accreditation Request</value>
        </filterItems>
        <filterItems>
            <field>Request_for_Change__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Request_for_Change__c</referenceTo>
    <relationshipLabel>Standard RFCs</relationshipLabel>
    <relationshipName>Request_for_Change</relationshipName>
    <type>Lookup</type>
</CustomField>