force-app/main/default/objects/Request_for_Change__c/fields/Related_SCA_Requested_Start_Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Related_SCA_Requested_Start_Time_of_Day__c</fullName>
    <formula>Related_SCA__r.Requested_Start_Time_of_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related SCA Requested Start Time of Day</label>
    <type>Time</type>
</CustomField>