force-app/main/default/objects/Request_for_Change__c/fields/Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Requested_For__c</fullName>
    <inlineHelpText>If left blank will auto populate to Creator</inlineHelpText>
    <label>Requested For&apos;s Email</label>
    <type>Email</type>
</CustomField>