force-app/main/default/objects/Request_for_Change__c/fields/Requested_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date_Time__c</fullName>
    <inlineHelpText>Only populated on requests from the Service Catalog</inlineHelpText>
    <label>Requested Start Date/Time</label>
    <type>DateTime</type>
</CustomField>