force-app/main/default/objects/Request_for_Change__c/fields/Requires_Start_Stop_Process__c.field-meta.xml
<CustomField>
    <fullName>Requires_Start_Stop_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Start/Stop Process</label>
    <type>Checkbox</type>
</CustomField>