force-app/main/default/objects/Request_for_Change__c/fields/RFC_Approved_Once__c.field-meta.xml
<CustomField>
    <fullName>RFC_Approved_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto checks if Type = Vendor or Release the FIRST time it is approved</description>
    <label>RFC Approved Once</label>
    <type>Checkbox</type>
</CustomField>