force-app/main/default/objects/Request_for_Change__c/fields/Schedule_Repeat_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Repeat_Frequency__c</fullName>
    <label>Schedule Repeat Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly on 1st {Friday}</fullName>
            </value>
            <value>
                <fullName>Monthly on 2nd {Friday}</fullName>
            </value>
            <value>
                <fullName>Monthly on 3rd {Friday}</fullName>
            </value>
            <value>
                <fullName>Monthly on Last {Friday}</fullName>
            </value>
            <value>
                <fullName>Weekly on {Friday}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>