force-app/main/default/objects/Request_for_Change__c/fields/Schedule_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Day__c</fullName>
    <label>Schedule Start Day</label>
    <type>Date</type>
</CustomField>