force-app/main/default/objects/Request_for_Change__c/fields/Schedule_Start_Day_Related_SCA__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Day_Related_SCA__c</fullName>
    <formula>Related_SCA__r.Schedule_Start_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Start Day Related SCA</label>
    <type>Date</type>
</CustomField>