force-app/main/default/objects/Request_for_Change__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spans Multiple Days</fullName>
            </value>
            <value>
                <fullName>Recurs Specific Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>