force-app/main/default/objects/Request_for_Change__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Enter summary description should be suitable for customer to view.</inlineHelpText>
    <label>Short Business Description</label>
    <type>TextArea</type>
</CustomField>