force-app/main/default/objects/Request_for_Change__c/fields/Source_Port_s__c.field-meta.xml
<CustomField>
    <fullName>Source_Port_s__c</fullName>
    <label>Source Port(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>