force-app/main/default/objects/Request_for_Change__c/fields/SvsNow_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>SvsNow_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>SvsNow Legacy ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>