force-app/main/default/objects/Request_for_Change__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Enter Team Keywords</inlineHelpText>
    <label>Tags</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>