force-app/main/default/objects/Request_for_Change__c/fields/Testing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Testing_Complete__c</fullName>
    <inlineHelpText>Has post implementation testing being completed?</inlineHelpText>
    <label>Testing Complete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>