force-app/main/default/objects/Request_for_Change__c/fields/Time_formula__c.field-meta.xml
<CustomField>
    <fullName>Time_formula__c</fullName>
    <formula>Planned_Start_Date_Time__c - Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time formula</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>